# shatter

./: .gitmodules  CMakeLists.txt  README.md
include/: App.h  AppBase.h
include/myLib/: myLib.h
src/: CMakeLists.txt  main.cpp  myLib.cpp
test/: CMakeLists.txt  testMyLib.cpp
